# s3prl

./: .gitignore  README.md  pyproject.toml  setup.py
s3prl/: hub.py  run_downstream.py  schedulers.py
s3prl/downstream/: README.md  experts.py  runner.py
s3prl/downstream/a2a-vc-vctk/: README.md  batch_vc_decode.sh  config_ar_taco2.yaml  dataset.py  decode.sh  evaluate.py  expert.py  find_best_epoch.py  model.py  training.ipynb  utils.py  vocoder_download.sh
s3prl/downstream/a2a-vc-vctk/data/: corpora.py  datamodule.py  dataset.py  loader.py  vcc2020_download.sh  vctk_download.sh
s3prl/downstream/a2a-vc-vctk/networks/: conditioning.py  decoder.py  encoder.py  tacovc.py
s3prl/downstream/a2o-vc-vcc2020/: model.py  requirements.txt  vc_evaluate.py
s3prl/upstream/: README.md  interfaces.py
s3prl/upstream/decoar/: expert.py
s3prl/upstream/decoar2/: expert.py
s3prl/upstream/decoar_layers/: expert.py
s3prl/upstream/unispeech_sat/: expert.py
s3prl/upstream/vq_wav2vec/: hubconf.py
s3prl/upstream/wav2vec/: expert.py  hubconf.py
s3prl/upstream/wav2vec2/: expert.py  hubconf.py
s3prl/upstream/wav2vec2q/: expert.py  hubconf.py
s3prl/upstream/wavlm/: expert.py
s3prl/utility/: helper.py
